Added one more step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: First step
+      - name: Checkout repo
+        uses: actions/checkout@v4
+      - name: Second step
         run: |
           echo "Hello world"
           mkdir mydir
